# Quizzes-be

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
alembic/: env.py
alembic/temp_versions/: 360fc126289d_create_user_table.py  3b2500da8697_init_quiz_and_attempt_tables.py  b590017da31f_add_companies_model.py  b7efb8bc56e8_add_auth_provider_hashed_password_can_.py  cc98806a37d9_add_is_banned_column_to_users.py  d2320cd60477_add_company_member_table_to_connect_.py  eea8a8d2badf_add_models_to_handle_invitations_and_.py
alembic/versions/: 19f353b8577e_create_user_table.py  2026-01-15_initial_prod.py  360fc126289d_create_user_table.py  3b2500da8697_init_quiz_and_attempt_tables.py  b590017da31f_add_companies_model.py  b7efb8bc56e8_add_auth_provider_hashed_password_can_.py  cc98806a37d9_add_is_banned_column_to_users.py  d2320cd60477_add_company_member_table_to_connect_.py  eea8a8d2badf_add_models_to_handle_invitations_and_.py
app/: config.py  main.py
app/core/: config.py  dependencies.py  exceptions.py  logger.py  security.py
app/crud/: user.py
app/db/: postgres.py  redis.py
app/routers/: auth_router.py  company_invitation_router.py  company_join_request_router.py  company_member_router.py  company_router.py  health_router.py  user.py  user_router.py
app/schemas/: base_schemas.py  user.py  user_schema.py
deploy/: Dockerfile  Dockerfile-dev  Dockerfile-prod  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
src/: main.py
(+175 files in other folders)
