[project]
name = "intern-meduzzen-be"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.17.2",
    "asgi-lifespan==2.1.0",
    "asyncpg==0.31.0",
    "fastapi==0.122.0",
    "httpx==0.28.1",
    "loguru==0.7.3",
    "psycopg2-binary==2.9.11",
    "pwdlib[argon2]==0.3.0",
    "pydantic[email]==2.12.5",
    "pydantic-settings==2.12.0",
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "redis==7.1.0",
    "requests==2.32.5",
    "sqlalchemy==2.0.44",
    "uvicorn==0.38.0",
    "ruff>=0.14.10",
    "fastapi-cache2>=0.2.2",
    "pyjwt>=2.10.1",
    "fastapi-limiter>=0.1.6",
    "black>=26.1.0",
]
